# mcdp-binaries

./: .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  build.rs
.github/workflows/: release.yml
scripts/: install.sh  release.sh
src/: main.rs
