[package]
name = "mcdp-tool"
version = "0.4.0"
edition = "2024"
authors = ["Andrea Censi <your.email@example.com>"]
description = "CLI tool with self-update capability"
readme = "README.md"
repository = "https://github.com/zupermind/mcdp-binaries"
build = "build.rs"

[build-dependencies]
# These dependencies are used by the build script only

[dependencies.anyhow]
version = "1"
default-features = false
features = ["std"]

[dependencies.clap]
version = "4.5"
features = ["derive", "help", "std", "color", "usage", "error-context", "suggestions"]
default-features = false

[dependencies.env_logger]
version = "0.11"
default-features = false

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.self_update]
version = "0.38"
features = ["archive-tar", "compression-flate2", "rustls"]
default-features = false

[dependencies.tokio]
version = "1.0"
features = ["full"]
default-features = false

[dependencies.zuper-rs-mcdp-cli]
version = "7"
registry = "zuper-registry"
default-features = false

# Add optional PyO3 dependency for cross-compilation
[dependencies.pyo3]
version = "0.23"
optional = true
features = ["abi3-py310"]

# Static linking configuration for musl targets
[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# Static linking configuration for macOS targets
[target.'cfg(target_os = "macos")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# SQLite configuration for static linking
[target.'cfg(target_env = "musl")'.dependencies.rusqlite]
version = "*"
features = ["bundled"]

# SQLite configuration for macOS static linking
[target.'cfg(target_os = "macos")'.dependencies.rusqlite]
version = "*"
features = ["bundled"]

# SQLx configuration for static linking on all targets
[target.'cfg(any(target_env = "musl", target_os = "macos"))'.dependencies.sqlx]
version = "*"
features = ["runtime-tokio-rustls", "sqlite"]
default-features = false

# Additional static linking configurations for musl
[target.'cfg(target_env = "musl")'.dependencies.ring]
version = "*"
features = []

# libsqlite3-sys configuration for bundled SQLite
[target.'cfg(any(target_env = "musl", target_os = "macos"))'.dependencies.libsqlite3-sys]
version = "*"
features = ["bundled"]

# Explicit configuration for musl targets only
[target.'cfg(target_env = "musl")'.dependencies.libsqlite3-sys]
version = "*"
features = ["bundled", "buildtime_bindgen"]

# Define features
[features]
default = []
python-abi3 = ["pyo3"]

[[bin]]
path = "src/main.rs"
name = "mcdp-tool"
required-features = []
